@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2022, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2024, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
  * https://oss.oracle.com/licenses/upl.
@@ -54,13 +54,7 @@ public class IllegalaccessProfile
         if (jdk.getVersion() > 8)
             {
             // options introduced in jdk 9
-            Freeforms jvmOptions = JvmOptions.include(
-                        "--add-opens=java.base/java.util=ALL-UNNAMED",
-                        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                        "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
-                        "--add-exports=java.management/sun.management=ALL-UNNAMED",
-                        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-                        "--add-opens=java.base/java.lang=ALL-UNNAMED");
+            Freeforms jvmOptions = JvmOptions.include();
 
             // Support was removed in JDK 17 so avoid warning message by not including in JDK 17 and greater
             if (jdk.getVersion() <= 16)
@@ -68,6 +62,17 @@ public class IllegalaccessProfile
                 jvmOptions = jvmOptions.with(new Freeform("--illegal-access=" + m_sValue));
                 }
 
+            if (jdk.getVersion() >= 22 && m_sValue.equals("strict"))
+                {
+                jvmOptions = JvmOptions.include("-Djavax.xml.catalog.resolve=strict",
+                                                "-Djdk.xml.jdkcatalog.resolve=strict");
+                }
+
+            Freeforms freeforms = optionsByType.get(Freeforms.class);
+            for (Freeform freeform : freeforms)
+                {
+                jvmOptions = jvmOptions.with(freeform);
+                }
             optionsByType.add(jvmOptions);
             }
 
